# pretensor

./: .gitignore  .gitlint  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  e2e.yml  release.yml
docker/quickstart/: README.md  docker-compose.yml
docs/: releases.md
guides/: quickstart.md
scripts/: audit_deny_list.py  benchmark_graph_rag_nl2sql.py  check_readme_urls.py  e2e_pagila.py
scripts/data/: pagila_nl2sql_bench.json
src/pretensor/: __init__.py  config.py  observability.py
tests/: SKILL.md  __init__.py  conftest.py  query_helpers.py  test_gitlint_config.py  test_observability.py  test_packaging.py  test_pretensor_config.py
tests/cli/: test_cli_error_handling.py  test_config_file.py  test_connections_cli.py  test_dbt_enrichment_cli.py  test_export_cli.py  test_index_cli.py  test_list_cli.py  test_main_cli.py  test_paths_cli.py  test_plugin.py  test_quickstart_cli.py  test_reindex_cli.py  test_semantic_cli.py  test_serve_cli.py  test_sync_grants_cli.py  test_validate_cli.py
tests/connectors/: test_base_connector.py  test_bigquery.py  test_catalog_enrichment.py  test_dsn_parsing.py  test_lineage_sqlglot.py  test_pg_array_parse.py  test_postgres_table_grants.py  test_postgres_views.py  test_registry_snowflake_optional.py  test_snowflake_connector.py  test_snowflake_table_grants.py
tests/contracts/: __init__.py  test_combiner.py  test_pipeline_step.py  test_scorer.py  test_search_index.py  test_semantic_layer.py
tests/core/: test_builder.py  test_graph_builder_lineage.py  test_lineage_store.py  test_models.py  test_portable_export.py  test_registry.py  test_semantic_schema.py
tests/e2e/: conftest.py  test_adventureworks_smoke.py  test_adventureworks_traverse.py  test_dbt_warehouse_scale_enrichment.py  test_index_cycle.py  test_mcp_tools.py  test_reindex.py  test_serve_smoke.py  test_tpcds_traverse.py  test_tpch_traverse.py  test_visibility.py
tests/enrichment/: test_dbt_lineage.py  test_dbt_manifest.py  test_dbt_metadata.py  test_dbt_pipeline.py  test_dbt_signals.py
tests/entities/: test_classifier.py  test_entity_builder.py  test_llm_extract.py  test_pagila_entities.py
tests/intelligence/: test_cluster_labeler.py  test_clustering.py  test_discovery.py  test_embeddings.py  test_heuristic.py  test_intelligence.py  test_join_paths.py  test_llm_infer.py  test_llm_runtime.py  test_metric_templates.py  test_pipeline.py  test_schema_classification.py  test_shadow_alias.py  test_statistical.py
tests/mcp/: test_compile_metric_tool.py  test_context_dbt.py  test_context_lineage.py  test_context_tool.py  test_detect_changes_errors.py  test_error_ergonomics.py  test_error_handling.py  test_impact_hop.py  test_schema_tool.py  test_service.py  test_tool_registry.py  test_traverse_ambiguous.py  test_traverse_dijkstra.py  test_traverse_pagila_shape.py  test_validate_sql_tool.py  test_visibility_mcp.py
tests/search/: test_search_index.py
tests/semantic/: test_compiler.py  test_semantic_layer.py  test_yaml_layer.py
tests/staleness/: test_staleness.py
tests/utils/: score_tracker.py
tests/validation/: test_query_validator.py
tests/visibility/: test_sync_grants.py  (+1 more)
(+147 files in other folders)
